--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
+    "sweetalert2": "^11.7.20",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.11.2"
+    "@types/react-datepicker": "^4.11.2",
+    "@types/sweetalert": "^2.0.4"
   }
 }
